Upgraded JUnit5 and matching Mockito versions. Removed PowerMockito